--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = rest\n",
+    "names = restaurants['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
